# 376-HyGCN-A-GCN-Accelerator-with-Hybrid-Architecture

./: CMakeLists.txt  citation.txt
configs/: HMC.ini  HYGCN.ini
dramsim3/: CMakeLists.txt
dramsim3/src/: common.h  configuration.cc  controller.cc  controller.h  dram_system.cc  dram_system.h  simple_stats.cc  simple_stats.h
gcn/: gcn.ini  gin.ini  gs.ini
gcn_dataset/: citeseer.txt  citeseer_edge.csv  cora.txt  cora_edge.csv  dblp.txt  dblp_edge.csv  pubmed.txt  pubmed_edge.csv  test.txt
hygcn/: config.cpp  config.h  graph.cpp  graph.h  hygcn.cpp  hygcn.h  tool.cpp  tool.h
hygcn/dataflow/: aggr.cpp  aggr.h  comb.cpp  comb.h  event.cpp  event.h  hy_rec.h
hygcn/hardware/: aggr_buf.h  coordinator.cpp  coordinator.h  simd.cpp  simd.h  spm.cpp  spm.h  systolic_arr.cpp  systolic_array.h
hygcn_test/: test.cpp
